--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1>It's My Birthday!</h1>
 <h2>On 26th June</h2>
-<img src="https://raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg" alt="Birthday Cake ">
+<img src="https://raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg" alt="Birthday Cake "/>
 
 <h3>What to Bring:</h3>
 <ul>
